--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Aziz Maredia Portforlio</title>
-    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/common.css" rel="stylesheet">
-    <link href="/css/glyphicon.css" rel="stylesheet">
+    <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/common.css" rel="stylesheet">
+    <link href="./css/glyphicon.css" rel="stylesheet">
 </head>
 
 <body>
@@ -24,8 +24,8 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="navLink"><a href="/views/index.html">HOME</a></li>
-                    <li class="navLink"><a href="/views/resume.html">RESUME</a></li>
+                    <li class="navLink"><a href="./index.html">HOME</a></li>
+                    <li class="navLink"><a href="./resume.html">RESUME</a></li>
                 </ul>
             </div>
         </div>
@@ -113,22 +113,22 @@
             <h2>My Clients</h2>
             <div class="col-xs-12 col-md-3">
                 <a href="#" class="thumbnail">
-                    <img src="/img/disney.png" alt="Walt Disney">
+                    <img src="./img/disney.png" alt="Walt Disney">
                 </a>
             </div>
             <div class="col-xs-12 col-md-3">
                 <a href="#" class="thumbnail">
-                    <img src="/img/FarmIns.png" alt="Farmers Insurance">
+                    <img src="./img/FarmIns.png" alt="Farmers Insurance">
                 </a>
             </div>
             <div class="col-xs-12 col-md-3">
                 <a href="#" class="thumbnail">
-                    <img src="/img/FedEx.png" alt="FedEx">
+                    <img src="./img/FedEx.png" alt="FedEx">
                 </a>
             </div>
             <div class="col-xs-12 col-md-3">
                 <a href="#" class="thumbnail">
-                    <img src="/img/quill.png" alt="Quill">
+                    <img src="./img/quill.png" alt="Quill">
                 </a>
             </div>
 
@@ -234,11 +234,11 @@
         <div class="text-center copyright">2015 Aziz Maredia, All Rights Resrved.</div>
     </Footer>
 
-    <script src="/js/jquery.min.js"></script>
-    <script src="/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/js/jquery.validate.min.js"></script>
-    <script src="/js/additional-methods.min.js"></script>
-    <script src="/js/common.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./bootstrap/js/bootstrap.min.js"></script>
+    <script src="./js/jquery.validate.min.js"></script>
+    <script src="./js/additional-methods.min.js"></script>
+    <script src="./js/common.js"></script>
 </body>
 
 </html>
