--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
 
 <body>
     <Header class="navbar navbar-default">
-        <div class="container">
+        <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
@@ -35,17 +35,17 @@
 
         <div class="row">
             <h2>PERSONAL DETAILS</h2>
-            <div class="col-xs-12 col-sm-3 profileImage">
+            <div class="col-xs-6 col-sm-3 profileImage">
                 <img src="./img/aziz.png" alt="Profile Image" />
             </div>
-            <div class=" col-xs-12 col-sm-3">
+            <div class=" col-xs-6 col-sm-3 perInfo">
                 <span class="formRow">Name: Aziz Akbarali Maredia</span>
                 <span class="formRow">Address: Glenview, Illinois</span>
                 <span class="formRow">Nationality: India</span>
                 <span class="formRow">Phone: (470)554-6078</span>
                 <span class="formRow">Email: <a href="mailto:aziz.webjava1@gmail.com">aziz.webjava1@gmail.com</a></span>
             </div>
-            <div class="col-xs-12 col-sm-6 formRow">
+            <div class="col-xs-12 col-sm-6 formRow addinfo">
                 <p>I work as User Interface Developer. I work with a team of dedicated people to deliver high quality web solutions for out customers. My everyday works includes converting design into functional and responsive UI template capable of adaapting to all kinds of devices available in the market.</p>
                 <p>Daily I use tools like HTML5, CSS3, PhotoShop, JavaScript and its frameworks and libraries. The advent of new technologies and my quest for knowledge helps me to deliver the best.</p>
             </div>
@@ -141,17 +141,6 @@
 
     <Footer>
         <div class="container">
-            <!--<div class="col-sm-6 col-md-6">
-
-            <div class="formRow">
-              <span class="glyphicon glyphicon-phone" aria-hidden="true"></span>
-              <span class="glyphicon-class">(470)554-6078</span>
-            </div >
-            <div class="formRow">
-              <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-              <span class="glyphicon-class">azizmaredia@gmail.com</span>
-            </div>
-        </div>-->
             <div class="col-md=12 text-center">
                 <h2>Follow Me</h2>
                 <div>
@@ -166,5 +155,10 @@
         </div>
         <div class="text-center copyright">2015 Aziz Maredia, All Rights Resrved.</div>
     </Footer>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./bootstrap/js/bootstrap.min.js"></script>
+    <script src="./js/jquery.validate.min.js"></script>
+    <script src="./js/additional-methods.min.js"></script>
+    <script src="./js/common.js"></script>
 </body>
 </html
