--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
                 <div>
                     <span class="facebook sIcon"></span>
                     <span class="googlePlus sIcon"></span>
-                    <span class="linkedin sIcon"></span>
+                    <span class="linkedin sIcon"><a href="https://www.linkedin.com/pub/aziz-maredia/103/abb/b75"></a></span>
                     <span class="skype sIcon"></span>
                     <span class="twitter sIcon"></span>
-                    <span class="github sIcon"></span>
+                    <span class="github sIcon"><a href="https://github.com/azizmaredia/azizPortfolio"></a></span>
                 </div>
             </div>
         </div>
