--- a/resume.html
+++ b/resume.html
@@ -161,4 +161,4 @@
     <script src="./js/additional-methods.min.js"></script>
     <script src="./js/common.js"></script>
 </body>
-</html
+</html>
